--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,10 +1,10 @@
-title: CV Arxiv Daily
-description: Automatically Update CV Papers Daily using Github Actions (Update Every 8th hours)
+title: AI4SE Arxiv Daily
+description: Automatically Update AI4SE Papers Daily using Github Actions (Update Every 8th hours)
 show_downloads: true
 
 github:
-  zip_url: https://github.com/Vincentqyw/cv-arxiv-daily
-  another_url: https://github.com/Vincentqyw/cv-arxiv-daily
+  zip_url: https://github.com/xudong7/ai4se-arxiv-daily
+  another_url: https://github.com/xudong7/ai4se-arxiv-daily
 
 ## add remote theme
 remote_theme: jekyll/minima@v2.5.1
@@ -12,8 +12,8 @@ remote_theme: jekyll/minima@v2.5.1
 # minima:
 skin: dark
 social_links:
-  twitter: AlphaRealcat
-  github: vincentqyw
+  # twitter: AlphaRealcat
+  github: xudong7
 
 plugins:
  - jekyll-remote-theme # add this line to the plugins list if you already have one
